--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -23,6 +23,7 @@ html {
 
 body {
     background: var(--primary-background-color);
+    background-color: var(--primary-background-color);
     color: -var(--primary-foreground-color);
     font-family: Font;
     font-size: 18px;
