--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-background-color: #282A36;
+    --primary-background-color: #282828;
     --secondary-background-color: #44475A;
     --tertiary-background-color: #1E1F29;
     --primary-foreground-color: #F8F8F2;
