cssssssssss go brrrrrrrr

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-background-color: #282828;
-    --secondary-background-color: #44475A;
-    --tertiary-background-color: #1E1F29;
+    --secondary-background-color: #282828;
+    --tertiary-background-color: #282828;
     --primary-foreground-color: #F8F8F2;
     --secondary-foreground-color: rgb(184, 187, 38);
     --tertiary-foreground-color: #757b99;
