--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,7 +6,7 @@
     --secondary-foreground-color: rgb(184, 187, 38);
     --tertiary-foreground-color: #757b99;
     --normal-shadow: #00000040;
-    --selected-shadow: #BD93F940
+    --selected-shadow: #7C9D45;
 }
 
 @font-face {
