--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,7 +6,7 @@
     --secondary-foreground-color: rgb(184, 187, 38);
     --tertiary-foreground-color: #757b99;
     --normal-shadow: #00000040;
-    --selected-shadow: #7C9D45;
+    --selected-shadow: #b8bb26;
 }
 
 @font-face {
@@ -33,8 +33,6 @@ body {
 }
 
 img {
-    height: 600px;
-    width: 350px;
     margin-left: 10em;
     margin-left: 10em;
     border-radius: 10px;
