--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -33,6 +33,8 @@ body {
 }
 
 img {
+    height: 600px;
+    width: 500px;
     margin-left: 10em;
     margin-left: 10em;
     border-radius: 10px;
