--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -42,6 +42,10 @@ img {
     transition: width 0.3s ease, height 0.3s ease, box-shadow 0.3s ease;
 }
 
+img:hover {
+    box-shadow: 10px 10px 20px rgba(184, 187, 38, 0.5);
+}
+
 nav {
     display: grid;
     grid-row-gap: 1em;
