--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -32,7 +32,7 @@ body {
     padding: 1em;
 }
 
-img {
+.img {
     height: 600px;
     width: 500px;
     margin-left: 10em;
@@ -42,7 +42,7 @@ img {
     transition: width 0.3s ease, height 0.3s ease, box-shadow 0.3s ease;
 }
 
-img:hover {
+.img:hover {
     box-shadow: 10px 10px 20px rgba(184, 187, 38, 0.5);
 }
 
