--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -32,8 +32,8 @@ body {
     padding: 1em;
 }
 
-.img {
-    height: 500px;
+img {
+    height: 600px;
     width: 500px;
     margin-left: 10em;
     margin-left: 10em;
@@ -42,7 +42,7 @@ body {
     transition: width 0.3s ease, height 0.3s ease, box-shadow 0.3s ease;
 }
 
-.img:hover {
+img:hover {
     box-shadow: 54px 54px 55px rgba(184, 187, 38, 0.5);
 }
 
