--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -42,6 +42,12 @@ img {
     transition: width 0.3s ease, height 0.3s ease, box-shadow 0.3s ease;
 }
 
+img:hover {
+    height: 610px;
+    width: 360px;
+    box-shadow: var(--selected-shadow) 0px 54px 55px;
+}
+
 nav {
     display: grid;
     grid-row-gap: 1em;
@@ -160,10 +166,17 @@ input:focus {
         height: auto;
     }
 
+    img:hover {
+        width: 28vw;
+        height: auto;
+    }
+
 }
 
 @media (max-width: 1000px) {
     img {
         display: none;
     }
+}
+}
 }
