--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-background-color: #3c3836;
+    --primary-background-color: #1d2021;
     --secondary-background-color: #32302f;
     --tertiary-background-color: #1d2021;
     --primary-foreground-color: #F8F8F2;
